@@ -7,9 +7,7 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-BUGS: - Focus with multiple copy of the same window fall in the wrong frame.
-
-######Nothing here :)
+Nothing here :)
 
 MAYBE
 =====
